Creacion de login y rutas

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@
 DATABASE_URL="file:./dev.db"
 
 PORT = 3001
+
+GOOGLE_CLIENT_ID = 113333846904-qolb1o8l304kk6v2vo1fmgg978v31umg.apps.googleusercontent.com
+GOOGLE_PRIVATE_ID = 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
