--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "googleapis": "^118.0.0",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-oidc": "^0.1.0",
+    "passport-oauth2": "^1.7.0",
     "prisma": "^4.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
